force-app/main/default/objects/Account/fields/ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>ABN_Number__c</fullName>
    <label>ABN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>