force-app/main/default/objects/Account/fields/Account_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_Source__c</fullName>
    <label>Account Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>