force-app/main/default/objects/Account/fields/Anticipate_intro_finance_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Anticipate_intro_finance_to_customer__c</fullName>
    <label>Anticipate intro finance to customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequently</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>Only when asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>