force-app/main/default/objects/Account/fields/Application_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Application_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Email Notifications</label>
    <type>Checkbox</type>
</CustomField>