force-app/main/default/objects/Account/fields/Application_Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Application_Notification_Email_Address__c</fullName>
    <label>Application Notification Email Address</label>
    <type>Email</type>
</CustomField>