force-app/main/default/objects/Account/fields/Are_you_Clean_Energy_Council_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Are_you_Clean_Energy_Council_Accredited__c</fullName>
    <label>Are you Clean Energy Council Accredited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>