force-app/main/default/objects/Account/fields/ASIC_Credit_Rep_Ceased__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Credit_Rep_Ceased__c</fullName>
    <label>ASIC Credit Rep Ceased</label>
    <type>Date</type>
</CustomField>