force-app/main/default/objects/Account/fields/ASIC_Credit_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Credit_Rep_Number__c</fullName>
    <label>ASIC Credit Rep Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>