force-app/main/default/objects/Account/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <description>Value of client&apos;s financial accounts that are managed by our firm.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>