force-app/main/default/objects/Account/fields/BackgroundImage__c.field-meta.xml
<CustomField>
    <fullName>BackgroundImage__c</fullName>
    <label>Background Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>