force-app/main/default/objects/Account/fields/Builders_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Builders_Marketing_Fee__c</fullName>
    <label>Builders Marketing Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>