force-app/main/default/objects/Account/fields/CIO_Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CIO_Membership_Expiry_Date__c</fullName>
    <label>CIO Membership Expiry Date</label>
    <type>Date</type>
</CustomField>