force-app/main/default/objects/Account/fields/CIO_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>CIO_Membership_Number__c</fullName>
    <label>CIO Membership Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>