force-app/main/default/objects/Account/fields/Clean_Energy_Council_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Clean_Energy_Council_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clean Energy Council Accredited</label>
    <type>Checkbox</type>
</CustomField>