force-app/main/default/objects/Account/fields/Corp_Credit_Rep_Appointed__c.field-meta.xml
<CustomField>
    <fullName>Corp_Credit_Rep_Appointed__c</fullName>
    <label>Corp. Credit Rep Appointed</label>
    <type>Date</type>
</CustomField>