force-app/main/default/objects/Account/fields/Current_Credit_Rep__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Rep__c</fullName>
    <formula>IF(ISBLANK(ASIC_Credit_Rep_Ceased__c) &amp;&amp; NOT(ISBLANK( ASIC_Credit_Rep_Number__c )), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Credit Rep</label>
    <type>Checkbox</type>
</CustomField>