force-app/main/default/objects/Account/fields/Custom_Loan_Options_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Custom_Loan_Options_Landing_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Loan Options Landing Page</label>
    <type>Checkbox</type>
</CustomField>