force-app/main/default/objects/Account/fields/Custom_Loan_Options_Page_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Loan_Options_Page_Message__c</fullName>
    <label>Custom Loan Options Page Message</label>
    <length>60</length>
    <type>Text</type>
</CustomField>