force-app/main/default/objects/Account/fields/Custom_Loan_Options_Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Loan_Options_Page_Type__c</fullName>
    <label>Custom Loan Options Page Type’</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-branded standard solar page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>