force-app/main/default/objects/Account/fields/CustomLoanOptionsPageMessage__c.field-meta.xml
<CustomField>
    <fullName>CustomLoanOptionsPageMessage__c</fullName>
    <label>Custom Loan Options Page Message</label>
    <length>60</length>
    <type>Text</type>
</CustomField>