force-app/main/default/objects/Account/fields/Dependent_Parent__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dependent Children</relationshipLabel>
    <relationshipName>Dependent_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>