force-app/main/default/objects/Account/fields/Entity_Name_pty_ltd__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name_pty_ltd__c</fullName>
    <label>Entity Name (pty ltd)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>