force-app/main/default/objects/Account/fields/ff__c.field-meta.xml
<CustomField>
    <fullName>ff__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type id</label>
    <type>Text</type>
</CustomField>