force-app/main/default/objects/Account/fields/Financial_Interests__c.field-meta.xml
<CustomField>
    <fullName>Financial_Interests__c</fullName>
    <label>Financial Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Municipal Bonds</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>College Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>