force-app/main/default/objects/Account/fields/Funding_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Funding_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Email Notifications</label>
    <type>Checkbox</type>
</CustomField>