force-app/main/default/objects/Account/fields/Funding_Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Funding_Notification_Email_Address__c</fullName>
    <label>Funding Notification Email Address</label>
    <type>Email</type>
</CustomField>