force-app/main/default/objects/Account/fields/General_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Business_Description__c</fullName>
    <label>General Business Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>