force-app/main/default/objects/Account/fields/How_do_you_conduct_your_appointment__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_conduct_your_appointment__c</fullName>
    <label>How do you conduct your appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to face</fullName>
            </value>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Video call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>