force-app/main/default/objects/Account/fields/How_many_new_sales_appointments_per_week__c.field-meta.xml
<CustomField>
    <fullName>How_many_new_sales_appointments_per_week__c</fullName>
    <label>How many new sales appointments per week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>