force-app/main/default/objects/Account/fields/How_many_sales_people_are_in_your_busine__c.field-meta.xml
<CustomField>
    <fullName>How_many_sales_people_are_in_your_busine__c</fullName>
    <label>How many sales people are in your busine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>