force-app/main/default/objects/Account/fields/How_often_will_you_refer_to_Parker_Lane__c.field-meta.xml
<CustomField>
    <fullName>How_often_will_you_refer_to_Parker_Lane__c</fullName>
    <label>How often will you refer to Parker Lane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequently</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>