force-app/main/default/objects/Account/fields/Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes__c</fullName>
    <label>Important Notes</label>
    <type>TextArea</type>
</CustomField>