force-app/main/default/objects/Account/fields/Interview_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted__c</fullName>
    <label>Interview Conducted</label>
    <type>Date</type>
</CustomField>