force-app/main/default/objects/Account/fields/Interview_Conducted_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted_Date__c</fullName>
    <label>Interview Conducted Date</label>
    <type>Date</type>
</CustomField>