force-app/main/default/objects/Account/fields/Investment_Experience__c.field-meta.xml
<CustomField>
    <fullName>Investment_Experience__c</fullName>
    <label>Investment Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Moderately Experienced</fullName>
            </value>
            <value>
                <fullName>Moderately Inexperienced</fullName>
            </value>
            <value>
                <fullName>Inexperienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>