force-app/main/default/objects/Account/fields/Is_Find_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Find_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Find Billing Address</label>
    <type>Checkbox</type>
</CustomField>