force-app/main/default/objects/Account/fields/Is_Sync_with_Household__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_with_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync with Household</label>
    <type>Checkbox</type>
</CustomField>