force-app/main/default/objects/Account/fields/Key_Accreditations_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Accreditations_2__c</fullName>
    <label>Key Accreditations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>