force-app/main/default/objects/Account/fields/Key_Accreditations_Summary__c.field-meta.xml
<CustomField>
    <fullName>Key_Accreditations_Summary__c</fullName>
    <formula>&quot;★ &quot;&amp;Key_Accreditations_1__c+BR()+
&quot;★ &quot;&amp;Key_Accreditations_2__c+BR()+
&quot;★ &quot;&amp;Key_Accreditations_3__c</formula>
    <label>Key Accreditations Summary</label>
    <type>Text</type>
</CustomField>