force-app/main/default/objects/Account/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <description>Date of the last client meeting or call.</description>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>