force-app/main/default/objects/Account/fields/Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Review__c</fullName>
    <description>Date of the last client review.</description>
    <label>Last Review</label>
    <type>Date</type>
</CustomField>