force-app/main/default/objects/Account/fields/Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date__c</fullName>
    <description>Last transaction date.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>