force-app/main/default/objects/Account/fields/Logo_Image_source__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_source__c</fullName>
    <label>Logo Image source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>