force-app/main/default/objects/Account/fields/LogoImage__c.field-meta.xml
<CustomField>
    <fullName>LogoImage__c</fullName>
    <label>Logo Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>