force-app/main/default/objects/Account/fields/Next_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Next_Interaction__c</fullName>
    <label>Next Interaction</label>
    <type>Date</type>
</CustomField>