force-app/main/default/objects/Account/fields/On_Board_Referral__c.field-meta.xml
<CustomField>
    <fullName>On_Board_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Board Referral</label>
    <type>Checkbox</type>
</CustomField>