force-app/main/default/objects/Account/fields/Onboarded_referrer__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarded referrer</label>
    <type>Checkbox</type>
</CustomField>