force-app/main/default/objects/Account/fields/Open_Solar_Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Open_Solar_Supplier_ID__c</fullName>
    <label>Open Solar Supplier ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>