force-app/main/default/objects/Account/fields/Other_Business_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Type_Description__c</fullName>
    <label>Other Business Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>