force-app/main/default/objects/Account/fields/Personal_Interests__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interests__c</fullName>
    <label>Personal Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>College Basketball</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Biking</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>