force-app/main/default/objects/Account/fields/Property_Asset_LVR__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset_LVR__c</fullName>
    <formula>Total_Property_Liabilities__c / Total_Property_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Asset LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>