force-app/main/default/objects/Account/fields/Referral_Fee_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Fee Applicable</label>
    <type>Checkbox</type>
</CustomField>