force-app/main/default/objects/Account/fields/Referred_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Referred by Company)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>