force-app/main/default/objects/Account/fields/Referrer_agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Referrer_agreement_Sent__c</fullName>
    <label>Referrer agreement Sent</label>
    <type>Date</type>
</CustomField>