force-app/main/default/objects/Account/fields/Referrer_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Business_Type__c</fullName>
    <label>Referrer Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar Installer</fullName>
            </value>
            <value>
                <fullName>Solar Retailer</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Builder Referrer</fullName>
            </value>
            <value>
                <fullName>Website Referrer</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Home improvement retailer</fullName>
            </value>
            <value>
                <fullName>Home improvement installer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>