force-app/main/default/objects/Account/fields/Referrer_Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Company_Status__c</fullName>
    <label>Referrer Company Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>