force-app/main/default/objects/Account/fields/Rent_income_pa__c.field-meta.xml
<CustomField>
    <fullName>Rent_income_pa__c</fullName>
    <label>Rent income pa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>