force-app/main/default/objects/Account/fields/RF_Rate_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>RF_Rate_inc_GST__c</fullName>
    <inlineHelpText>IF the rate is a %, do not add GST (ie 20% split should be 0.2 not 0.22)</inlineHelpText>
    <label>RF Rate inc GST</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>