force-app/main/default/objects/Account/fields/RF_Type__c.field-meta.xml
<CustomField>
    <fullName>RF_Type__c</fullName>
    <label>RF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage of Revenue</fullName>
            </value>
            <value>
                <fullName>Percentage of Loan Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>