force-app/main/default/objects/Account/fields/Signed_Referrer_Agreement_Returned__c.field-meta.xml
<CustomField>
    <fullName>Signed_Referrer_Agreement_Returned__c</fullName>
    <label>Signed Referrer Agreement Returned</label>
    <type>Date</type>
</CustomField>