force-app/main/default/objects/Account/fields/Summary_of_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Services_Offered__c</fullName>
    <label>Summary of Services Offered</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>