force-app/main/default/objects/Account/fields/Supplier_Logo_URL_For_Site__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Logo_URL_For_Site__c</fullName>
    <label>Supplier Logo URL For Site</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>