force-app/main/default/objects/Account/fields/Total_Bank_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Bank_Deposits__c</fullName>
    <description>Value of all banking deposit accounts.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bank Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>