force-app/main/default/objects/Account/fields/Total_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Accounts__c</fullName>
    <description>Sum of Total Bank Deposits and Total Investments.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Financial Accounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>