force-app/main/default/objects/Account/fields/Total_Financial_Accounts_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Accounts_Primary_Owner__c</fullName>
    <description>Calculated total of financial account balances where the client is the primary owner of either individually owned and jointly owned accounts.</description>
    <label>Total Financial Accounts Primary Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>